src/Kys.Parser/KysParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from KysParser.g4 by ANTLR 4.9

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Kys.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9")]
[System.CLSCompliant(false)]
public partial class KysParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BASH=1, COMMENT=2, Kvar=3, Kset=4, Kdef=5, Kfunc=6, Kexit=7, Kif=8, Kelse=9, 
		Kwhile=10, Ktimed=11, Ktimeout=12, Kwait=13, Kfor=14, Kkyl=15, Kkys=16, 
		NULL=17, BOOL=18, ID=19, GID=20, RID=21, STRING=22, NUMBER=23, UNIARIT=24, 
		POTENCIALASSIGN=25, POTENCIAL=26, MULTIPLICATIVEASSIGN=27, MULTIPLICATIVE=28, 
		MODULEASSIGN=29, ADITIVEASSIGN=30, ADITIVE=31, EQRELATIONAL=32, RELATIONAL=33, 
		EQUALITY=34, ANDOR=35, PARAMS=36, Sless=37, Sgreat=38, Smod=39, Spot=40, 
		Sroot=41, Sdiv=42, Smul=43, Splus=44, Sminus=45, Scomma=46, Sdot=47, Sor=48, 
		Sand=49, Snot=50, SRpar=51, SLpar=52, SLbrack=53, SRbrack=54, Sequal=55, 
		Sdolar=56, Sarr=57, Scomment=58, Sinstruction=59, SC=60, WS=61, ALL=62;
	public const int
		RULE_program = 0, RULE_toplevel = 1, RULE_kyl = 2, RULE_kys = 3, RULE_instruction = 4, 
		RULE_funcdefinition = 5, RULE_parameters = 6, RULE_params = 7, RULE_exitprogram = 8, 
		RULE_sentence = 9, RULE_control = 10, RULE_ifcontrol = 11, RULE_elsecontrol = 12, 
		RULE_whilecontrol = 13, RULE_twhilecontrol = 14, RULE_waitcontrol = 15, 
		RULE_twbucle = 16, RULE_timeoutcontrol = 17, RULE_forcontrol = 18, RULE_forexpression = 19, 
		RULE_varoperation = 20, RULE_block = 21, RULE_funccall = 22, RULE_funcresult = 23, 
		RULE_arguments = 24, RULE_declaration = 25, RULE_creation = 26, RULE_definition = 27, 
		RULE_asignation = 28, RULE_selfasignation = 29, RULE_expression = 30, 
		RULE_value = 31;
	public static readonly string[] ruleNames = {
		"program", "toplevel", "kyl", "kys", "instruction", "funcdefinition", 
		"parameters", "params", "exitprogram", "sentence", "control", "ifcontrol", 
		"elsecontrol", "whilecontrol", "twhilecontrol", "waitcontrol", "twbucle", 
		"timeoutcontrol", "forcontrol", "forexpression", "varoperation", "block", 
		"funccall", "funcresult", "arguments", "declaration", "creation", "definition", 
		"asignation", "selfasignation", "expression", "value"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'var'", "'set'", "'def'", "'func'", "'exit'", "'if'", 
		"'else'", "'while'", "'timed'", "'timeout'", "'wait'", "'for'", "'kyl'", 
		"'kys'", "'null'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'<'", "'>'", 
		"'%'", "'^'", "'~'", "'/'", "'*'", "'+'", "'-'", "','", "'.'", "'||'", 
		"'&&'", "'!'", "')'", "'('", "'{'", "'}'", "'='", "'$'", "'@'", "'//'", 
		"'#!'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BASH", "COMMENT", "Kvar", "Kset", "Kdef", "Kfunc", "Kexit", "Kif", 
		"Kelse", "Kwhile", "Ktimed", "Ktimeout", "Kwait", "Kfor", "Kkyl", "Kkys", 
		"NULL", "BOOL", "ID", "GID", "RID", "STRING", "NUMBER", "UNIARIT", "POTENCIALASSIGN", 
		"POTENCIAL", "MULTIPLICATIVEASSIGN", "MULTIPLICATIVE", "MODULEASSIGN", 
		"ADITIVEASSIGN", "ADITIVE", "EQRELATIONAL", "RELATIONAL", "EQUALITY", 
		"ANDOR", "PARAMS", "Sless", "Sgreat", "Smod", "Spot", "Sroot", "Sdiv", 
		"Smul", "Splus", "Sminus", "Scomma", "Sdot", "Sor", "Sand", "Snot", "SRpar", 
		"SLpar", "SLbrack", "SRbrack", "Sequal", "Sdolar", "Sarr", "Scomment", 
		"Sinstruction", "SC", "WS", "ALL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "KysParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static KysParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public KysParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KysParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ToplevelContext[] toplevel() {
			return GetRuleContexts<ToplevelContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ToplevelContext toplevel(int i) {
			return GetRuleContext<ToplevelContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext[] instruction() {
			return GetRuleContexts<InstructionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext instruction(int i) {
			return GetRuleContext<InstructionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Kkyl || _la==Kkys) {
				{
				{
				State = 64; toplevel();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 70; instruction();
				}
				}
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Kvar) | (1L << Kset) | (1L << Kdef) | (1L << Kfunc) | (1L << Kexit) | (1L << Kif) | (1L << Kwhile) | (1L << Ktimed) | (1L << Kwait) | (1L << Kfor) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ToplevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public KylContext kyl() {
			return GetRuleContext<KylContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public KysContext kys() {
			return GetRuleContext<KysContext>(0);
		}
		public ToplevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_toplevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToplevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ToplevelContext toplevel() {
		ToplevelContext _localctx = new ToplevelContext(Context, State);
		EnterRule(_localctx, 2, RULE_toplevel);
		try {
			State = 77;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Kkyl:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75; kyl();
				}
				break;
			case Kkys:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76; kys();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KylContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Kkyl() { return GetToken(KysParser.Kkyl, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KysParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(KysParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(KysParser.STRING, i);
		}
		public KylContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_kyl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKyl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KylContext kyl() {
		KylContext _localctx = new KylContext(Context, State);
		EnterRule(_localctx, 4, RULE_kyl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; Match(Kkyl);
			State = 80; Match(ID);
			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 81; Match(STRING);
				}
				}
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==STRING );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KysContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Kkys() { return GetToken(KysParser.Kkys, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KysParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		public KysContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_kys; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKys(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KysContext kys() {
		KysContext _localctx = new KysContext(Context, State);
		EnterRule(_localctx, 6, RULE_kys);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; Match(Kkys);
			State = 87; Match(ID);
			State = 91;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 88; value();
					}
					} 
				}
				State = 93;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExitprogramContext exitprogram() {
			return GetRuleContext<ExitprogramContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncdefinitionContext funcdefinition() {
			return GetRuleContext<FuncdefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SentenceContext sentence() {
			return GetRuleContext<SentenceContext>(0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstructionContext instruction() {
		InstructionContext _localctx = new InstructionContext(Context, State);
		EnterRule(_localctx, 8, RULE_instruction);
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Kexit:
				EnterOuterAlt(_localctx, 1);
				{
				State = 94; exitprogram();
				}
				break;
			case Kfunc:
				EnterOuterAlt(_localctx, 2);
				{
				State = 95; funcdefinition();
				}
				break;
			case Kvar:
			case Kset:
			case Kdef:
			case Kif:
			case Kwhile:
			case Ktimed:
			case Kwait:
			case Kfor:
			case ID:
				EnterOuterAlt(_localctx, 3);
				{
				State = 96; sentence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncdefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Kfunc() { return GetToken(KysParser.Kfunc, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(KysParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SLpar() { return GetToken(KysParser.SLpar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParametersContext parameters() {
			return GetRuleContext<ParametersContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SRpar() { return GetToken(KysParser.SRpar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FuncdefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcdefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncdefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncdefinitionContext funcdefinition() {
		FuncdefinitionContext _localctx = new FuncdefinitionContext(Context, State);
		EnterRule(_localctx, 10, RULE_funcdefinition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(Kfunc);
			State = 100; Match(ID);
			State = 101; Match(SLpar);
			State = 102; parameters();
			State = 103; Match(SRpar);
			State = 104; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametersContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARAMS() { return GetToken(KysParser.PARAMS, 0); }
		public ParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameters; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametersContext parameters() {
		ParametersContext _localctx = new ParametersContext(Context, State);
		EnterRule(_localctx, 12, RULE_parameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 106; @params();
				}
			}

			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PARAMS) {
				{
				State = 109; Match(PARAMS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(KysParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(KysParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Scomma() { return GetTokens(KysParser.Scomma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Scomma(int i) {
			return GetToken(KysParser.Scomma, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_params; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParams(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamsContext @params() {
		ParamsContext _localctx = new ParamsContext(Context, State);
		EnterRule(_localctx, 14, RULE_params);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(ID);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Scomma) {
				{
				{
				State = 113; Match(Scomma);
				State = 114; Match(ID);
				}
				}
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExitprogramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Kexit() { return GetToken(KysParser.Kexit, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(KysParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SC() { return GetToken(KysParser.SC, 0); }
		public ExitprogramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exitprogram; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExitprogram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExitprogramContext exitprogram() {
		ExitprogramContext _localctx = new ExitprogramContext(Context, State);
		EnterRule(_localctx, 16, RULE_exitprogram);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; Match(Kexit);
			State = 121; Match(NUMBER);
			State = 122; Match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SentenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ControlContext control() {
			return GetRuleContext<ControlContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunccallContext funccall() {
			return GetRuleContext<FunccallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VaroperationContext varoperation() {
			return GetRuleContext<VaroperationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SC() { return GetToken(KysParser.SC, 0); }
		public SentenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sentence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSentence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SentenceContext sentence() {
		SentenceContext _localctx = new SentenceContext(Context, State);
		EnterRule(_localctx, 18, RULE_sentence);
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 124; control();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 125; funccall();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 126; varoperation();
				State = 127; Match(SC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ControlContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IfcontrolContext ifcontrol() {
			return GetRuleContext<IfcontrolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhilecontrolContext whilecontrol() {
			return GetRuleContext<WhilecontrolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TwhilecontrolContext twhilecontrol() {
			return GetRuleContext<TwhilecontrolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WaitcontrolContext waitcontrol() {
			return GetRuleContext<WaitcontrolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForcontrolContext forcontrol() {
			return GetRuleContext<ForcontrolContext>(0);
		}
		public ControlContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_control; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitControl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ControlContext control() {
		ControlContext _localctx = new ControlContext(Context, State);
		EnterRule(_localctx, 20, RULE_control);
		try {
			State = 136;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Kif:
				EnterOuterAlt(_localctx, 1);
				{
				State = 131; ifcontrol();
				}
				break;
			case Kwhile:
				EnterOuterAlt(_localctx, 2);
				{
				State = 132; whilecontrol();
				}
				break;
			case Ktimed:
				EnterOuterAlt(_localctx, 3);
				{
				State = 133; twhilecontrol();
				}
				break;
			case Kwait:
				EnterOuterAlt(_localctx, 4);
				{
				State = 134; waitcontrol();
				}
				break;
			case Kfor:
				EnterOuterAlt(_localctx, 5);
				{
				State = 135; forcontrol();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfcontrolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Kif() { return GetToken(KysParser.Kif, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SLpar() { return GetToken(KysParser.SLpar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SRpar() { return GetToken(KysParser.SRpar, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElsecontrolContext elsecontrol() {
			return GetRuleContext<ElsecontrolContext>(0);
		}
		public IfcontrolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifcontrol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKysParserVisitor<TResult> typedVisitor = visitor as IKysParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfcontrol(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfcontrolContext ifcontrol() {
		IfcontrolContext _localctx = new IfcontrolContext(Context, State);
		EnterRule(_localctx, 22, RULE_ifcontrol);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; Match(Kif);
			State = 139; Match(SLpar);
			State = 140; expression(0);
			State = 141; Match(SRpar);
			State = 142; block();
			State = 144;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 143; elsecontrol();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElsecontrolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Kelse() { return GetToken(KysParser.Kelse, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IfcontrolContext ifcontrol() {
			return GetRuleContext<IfcontrolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElsecontrolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elsecontrol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
